--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,23 +13,40 @@
 		<a href="#"><%= title %></a>
 		<p class="list-item-categories"><%= categories_name %></p>
 		<br/>
-		<p class="list-item-timestamp">Posted: <%= pub_date %></p>
-		<p class="list-item-timestamp">Updated: <%= updated %></p>
+		<p class="list-item-timestamp">Posted: <% print(pub_date.toString('h:mm tt dddd, MMM. d, yyyy')); %></p>
+		<p class="list-item-timestamp">Updated: <% print(updated.toString('h:mm tt dddd, MMM. d, yyyy')); %></p>
 	</script>
 
 	<script id="story-column-view-template" type="text/template">
-		<div class="breadcrumbs"></div>
+		<div id="breadcrumbs">
+			<a href="index.html">Home</a> &gt; <a href="#">News</a>
+		</div>
 		<h1><%= title %></h1>
-		<p class="story-timestamp">Updated: <%= updated %> | Posted: <%= pub_date %></p>
+		<p class="story-timestamp">
+			Updated: <% print(pub_date.toString('h:mm tt dddd, MMM. d, yyyy')); %> | 
+			Posted: <% print(updated.toString('h:mm tt dddd, MMM. d, yyyy')); %>
+		</p>
+
 		<div class="lead-photo">
-			<img src="<%= lead_photo_image_url %>" alt="<%= lead_photo_caption %>" />
-			<span class="photo-credit"><%= lead_photo_credit %></span>
+			<div class="image-block">
+				<img src="<%= lead_photo_image_url %>" alt="<%= lead_photo_caption %>" />
+				<span class="photo-credit"><%= lead_photo_credit %></span>
+			</div>
 			<p class="photo-caption"><%= lead_photo_caption %></p>
 		</div>
-		<div class="social-links"></div>
-		<p class="byline"><% author.join(', ') %></p>
-		<div class="column"><%= columns[0] %></section>
-		<div class="column"><%= columns[1] %></section>
+
+		<div id="social-links">
+			<a href="#"><div class="icon icon-comment"></div>Comment</a>
+			<a href="#"><div class="icon icon-share"></div>Share</a>
+			<a href="#"><div class="icon icon-favorite"></div>Favorite</a>
+			<a href="#"><div class="icon icon-vote"></div>Vote</a>
+		</div>
+
+		<div id="columns">
+			<p class="byline">By <a href="#"><% print(author.join(', ')); %></a></p>
+			<div class="column"><% print(columns[0]) %></div>
+			<div class="column clearfix"><% print(columns[1]) %></div>
+		</div>
 	</script>
 
 	<div id="container">
@@ -39,6 +56,7 @@
 	<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js"></script>
 	<script type="text/javascript" src="../js/CX.Core.js"></script>
 	<script type="text/javascript" src="../js/models/CX.Story.js"></script>
 	<script type="text/javascript" src="../js/collections/CX.StoryCollection.js"></script>
